# eval

./: .gitignore  Cargo.toml  LICENSE  README.md
.obsidian/: appearance.json  workspace.json
src/: lib.rs  main.rs
