[package]
name = "eval"
version = "0.1.0"
edition = "2021"
authors = ["Kivooeo <Kivooeo123@gmail.com>"]
homepage = "https://github.com/Kivooeo/eval-rs"
repository = "https://github.com/Kivooeo/eval-rs"
description = "A library for evaluating math expressions easily"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
